Bug 415749 - When selecting multiple scan areas only first area gets scanned ("Automatic Document Feeder")
Summary: When selecting multiple scan areas only first area gets scanned ("Automatic D...
Status: RESOLVED FIXED
Alias: None
Product: Skanlite
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1.0.1
Platform: Ubuntu Linux
: HI normal
Target Milestone: ---
Assignee: Kåre Särs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-12-31 15:50 UTC by keeper_dev
Modified: 2020-09-28 13:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description keeper_dev 2019-12-31 15:50:54 UTC
I have a Brother MFC-L2700 Printer/Scanner connected via network. It has a "Document Feeder" along with a Flatbed Scanner.

Per default, "Automatic Document Feeder" is selected as Scan source (but still the flatbed scanner is used, when there is no document in the feeder). 
When adding multiple areas to scan on a preview and clicking on scan afterwards, only the first area is getting scanned.

STEPS TO REPRODUCE
1. Open skanlite and make sure "Automatic Document Feeder" is set as Scan source
2. Create preview
3. Create scan area and click on "+"
4. Create additional scan area and click on "+" again
5. Click on "Scan"


OBSERVED RESULT
Only the first scan area is getting scanned


EXPECTED RESULT
All scan areas are getting scanned and saved in multiple files 
OR 
Prevent usage of scan areas along with "Automatic Document Feeder"-Scan source and show a hint (in manual as well), that suggests to select flatbed as Scanner source, since multiple area scanning is not working as expected, when "Automatic Document Feeder" is selected.


SOFTWARE/OS VERSIONS
Xubuntu 18.04

ADDITIONAL INFORMATION
-
Comment 1 Nowa Ammerlaan 2020-09-04 15:50:50 UTC
I think I encountered the same (or at least very similar) issue with my Brother MFC-j5320dw on Gentoo Linux.

When the "Preview before saving" feature in the settings is enabled, and while trying to scan multiple documents (Using the automatic document feeder), only the first document will get scanned. After the first document has been scanned and after pressing the save button, the rest of the documents will just get pulled through.

Disabling the "Preview before saving" feature fixes the issue, and makes the scanner scan multiple documents as expected using the ADF.
Comment 2 Kåre Särs 2020-09-27 15:07:31 UTC
Git commit bdeb3c826bfd674a215f693592ca16e70cc2f6e0 by Kåre Särs.
Committed on 27/09/2020 at 15:07.
Pushed by sars into branch 'master'.

Fix multi-page scanning while also showing scanned images dialog

M  +3    -0    src/skanlite.cpp

https://invent.kde.org/graphics/skanlite/commit/bdeb3c826bfd674a215f693592ca16e70cc2f6e0
Comment 3 Kåre Särs 2020-09-27 15:18:24 UTC
Git commit 2659134fed260cbb85e708390a787fd8362105c9 by Kåre Särs.
Committed on 27/09/2020 at 15:16.
Pushed by sars into branch 'master'.

Disable multi-selection for Automatic Document Feeder

Only the active selection is scanned anyways when we have an ADF
FIXED-IN: 20.12.0

M  +11   -0    src/ksaneviewer.cpp
M  +2    -0    src/ksaneviewer.h
M  +26   -19   src/ksanewidget_p.cpp
M  +2    -0    src/ksanewidget_p.h
M  +0    -3    src/options/ksaneoptcombo.h
M  +1    -0    src/options/ksaneoption.h
M  +10   -2    src/selectionitem.cpp
M  +2    -0    src/selectionitem.h

https://invent.kde.org/graphics/libksane/commit/2659134fed260cbb85e708390a787fd8362105c9
Comment 4 Nate Graham 2020-09-28 13:30:52 UTC
Thanks Kåre!