Disable multi-selection for Automatic Document Feeder

Only the active selection is scanned anyways when we have an ADF

BUG: 415749
FIXED-IN: 20.12.0